<resources>
    <string name="app_name" translatable="false">OnePlus Battery Saver</string>
    <string name="apply">Apply</string>
    <string name="insert_battery_value">Insert Battery Value</string>
    <string name="outOfRange">Battery Percentage is out of range</string>
    <string name="useBatterySavingTrigger">Trigger on energy saving</string>
    <string name="valueSetSuccessfully">The value has been set successfully</string>
    <string name="noPermissionTitle">Missing Permissions</string>
    <string name="noPermissionMessage">This application does not have the WRITE_SECURE_SETTINGS flag, please read the repository for more information</string>
    <string name="currentBatteryTrigger">Current percentage set: %s</string>
    <string name="noValuePassed">You must insert a value!</string>
    <string name="refreshRateChangedTitle">Refresh Rate Changed</string>
    <string name="refreshRateChangedMessage">The Refresh Rate has been set to: %sHz</string>
    <string name="notSupportedTitle">Device not supported</string>
    <string name="notSupportedMessage">This device is not supported, check the repository for a list of supported models</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="batteryOptMessage">This app requires you to turn off automatic battery optimization for this app to work</string>
    <string name="batteryOptTitle">Disable battery optimization</string>
    <string name="updateRequiredTitle">New Version Available</string>
    <string name="updateRequiredMessage">A new version is available for the application, press OK to be redirected to the download page</string>
    <string name="noServiceAvailableMessage">The application cannot connect to the remote services, do you want to try again?</string>
    <string name="noServiceAvailableTitle">No Service Available</string>
    <string name="showRepo">Show Repository</string>
</resources>